# market_regime_detection

./: .gitignore  Detecting breaks.ipynb  README.md  pyproject.toml
market_regime_detection/: chow_test.py  data.py  qlr_test.py  wasserstein_multivariate.py  wasserstein_univariate.py
notebooks/: R_Vision_2_1hour_01112025_27032026.txt  data.xlsx  multivariate_detection.ipynb  trading_strategy_example.ipynb  univariate_detection.ipynb
